--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets\css\style.css" type="text/css">
 </head>
@@ -20,6 +24,11 @@
         <div class="row main-game-console">
             <div class="col-10">
                 <div id="game-grid"></div>
+            </div>
+            <div class="col-2">
+                <!-- restart button -->
+                <button type="button" onclick="restartLevel()"><i class="fas fa-undo-alt"></i></button>
+                <!-- main menu button -->
             </div>
         </div>
     </div>
