--- a/index.html
+++ b/index.html
@@ -26,9 +26,40 @@
                 <div id="game-grid"></div>
             </div>
             <div class="col-2">
-                <!-- restart button -->
-                <button type="button" onclick="restartLevel()"><i class="fas fa-undo-alt"></i></button>
-                <!-- main menu button -->
+                <div class="game-console-nav-buttons">
+                    <!-- restart button -->
+                    <button type="button" onclick="restartLevel()"><i class="fas fa-undo-alt"></i></button>
+                    <!-- main menu button -->
+                    <button type="button" onclick=""><i class="fas fa-home"></i></button>
+                </div>
+                <div class="game-console-setup">
+                    <!-- level difficulty -->
+                    <!-- cat difficulty -->
+                </div>
+                <div class="game-console-info">
+                    <!-- time limit -->
+                    <!-- score -->
+                </div>
+                <div class="game-console-user-control-feedback">
+                    <!-- arrow buttons -->
+                    <div class="arrows">
+                        <div class="arrows-up">
+                            <button class="controller-button-container" id="arrow-up" type="button" onclick=""><i
+                                    class="fas fa-arrow-alt-circle-up"></i></button>
+                        </div>
+                        <div class="arrows-left-right">
+                            <button class="controller-button-container" id="arrow-left" type="button" onclick=""><i
+                                    class="fas fa-arrow-alt-circle-left"></i></button>
+                            <div class="controller-center"><span class="controller-center-circle"></span></div>
+                            <button class="controller-button-container" id="arrow-right" type="button" onclick=""><i
+                                    class="fas fa-arrow-alt-circle-right"></i></button>
+                        </div>
+                        <div class="arrows-down">
+                            <button class="controller-button-container" id="arrow-down" type="button" onclick=""><i
+                                    class="fas fa-arrow-alt-circle-down"></i></button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
