committing all files for deployment to github pages (minor changes in each file)

--- a/index.html
+++ b/index.html
@@ -38,7 +38,24 @@
                 </div>
                 <div class="game-console-info">
                     <!-- time limit -->
+                    <div class="time-limit-block">
+                        <div class="time-limit-text">
+                            Time Left:
+                            <span id="time-left-mins">
+                                00
+                            </span>
+                            :
+                            <span id="time-left-secs">
+                                00
+                            </span>
+                        </div>
+                        <div class="time-limit-digits"></div>
+                    </div>
                     <!-- score -->
+                    <div class="score-block">
+                        <div class="score-text">Score:</div>
+                        <div class="score-digits"></div>
+                    </div>
                 </div>
                 <div class="game-console-user-control-feedback">
                     <!-- arrow buttons -->
