--- a/index.html
+++ b/index.html
@@ -25,59 +25,70 @@
             <div class="col-10">
                 <div id="game-grid"></div>
             </div>
-            <div class="col-2">
+            <div class="col-2 side-game-console">
+
                 <div class="game-console-nav-buttons">
                     <!-- restart button -->
                     <button type="button" onclick="restartLevel()"><i class="fas fa-undo-alt"></i></button>
                     <!-- main menu button -->
                     <button type="button" onclick=""><i class="fas fa-home"></i></button>
                 </div>
-                <div class="game-console-setup">
-                    <!-- level difficulty -->
-                    <!-- cat difficulty -->
-                </div>
-                <div class="game-console-info">
-                    <!-- time limit -->
-                    <div class="time-limit-block">
-                        <div class="time-limit-text">
-                            Time Left:
-                            <span id="time-left-mins">
-                                00
-                            </span>
-                            :
-                            <span id="time-left-secs">
-                                00
-                            </span>
-                        </div>
-                        <div class="time-limit-digits"></div>
-                    </div>
-                    <!-- score -->
-                    <div class="score-block">
-                        <div class="score-text">Score:</div>
-                        <div class="score-digits"></div>
-                    </div>
-                </div>
-                <div class="game-console-user-control-feedback">
-                    <!-- arrow buttons -->
-                    <div class="arrows">
-                        <div class="arrows-up">
-                            <button class="controller-button-container" id="arrow-up" type="button" onclick=""><i
-                                    class="fas fa-arrow-alt-circle-up"></i></button>
-                        </div>
-                        <div class="arrows-left-right">
-                            <button class="controller-button-container" id="arrow-left" type="button" onclick=""><i
-                                    class="fas fa-arrow-alt-circle-left"></i></button>
-                            <div class="controller-center"><span class="controller-center-circle"></span></div>
-                            <button class="controller-button-container" id="arrow-right" type="button" onclick=""><i
-                                    class="fas fa-arrow-alt-circle-right"></i></button>
-                        </div>
-                        <div class="arrows-down">
-                            <button class="controller-button-container" id="arrow-down" type="button" onclick=""><i
-                                    class="fas fa-arrow-alt-circle-down"></i></button>
+
+                <div class="game-console-game-buttons">
+                    <div class="game-console-setup">
+                        <!-- level difficulty -->
+                        <div class="level-difficulty">
+                            <h2>Choose Level Difficulty</h2>
+                            <button class="btn-difficulty-level" type="button">Easy</button>
+                            <button class="btn-difficulty-level" type="button">Medium</button>
+                            <button class="btn-difficulty-level" type="button">Hard</button>
                         </div>
                     </div>
+                    <div class="game-console-info">
+                        <!-- time limit -->
+                        <div class="time-limit-block">
+                            <div class="time-limit-text">
+                                Time Left:
+                                <span id="time-left-mins">
+                                    00
+                                </span>
+                                :
+                                <span id="time-left-secs">
+                                    00
+                                </span>
+                            </div>
+                            <div class="time-limit-digits"></div>
+                        </div>
+                        <!-- score -->
+                        <div class="score-block">
+                            <div class="score-text">Score:</div>
+                            <div class="score-digits"></div>
+                        </div>
+                    </div>
+                    <div class="game-console-user-control-feedback">
+                        <!-- arrow buttons -->
+                        <div class="arrows">
+                            <div class="arrows-up">
+                                <button class="controller-button-container" id="arrow-up" type="button" onclick=""><i
+                                        class="fas fa-arrow-alt-circle-up"></i></button>
+                            </div>
+                            <div class="arrows-left-right">
+                                <button class="controller-button-container" id="arrow-left" type="button" onclick=""><i
+                                        class="fas fa-arrow-alt-circle-left"></i></button>
+                                <div class="controller-center"><span class="controller-center-circle"></span></div>
+                                <button class="controller-button-container" id="arrow-right" type="button" onclick=""><i
+                                        class="fas fa-arrow-alt-circle-right"></i></button>
+                            </div>
+                            <div class="arrows-down">
+                                <button class="controller-button-container" id="arrow-down" type="button" onclick=""><i
+                                        class="fas fa-arrow-alt-circle-down"></i></button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
             </div>
+
         </div>
     </div>
 
