--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                     <div class="game-console-nav-buttons">
                         <!-- restart button -->
-                        <button class="btn-nav" type="button" onclick="restartLevel()"><i
+                        <button class="btn-nav" type="button" onclick="restartLevel(true);"><i
                                 class="fas fa-undo-alt"></i></button>
                         <!-- main menu button -->
                         <button class="btn-nav" type="button" onclick=""><i class="fas fa-home"></i></button>
@@ -50,9 +50,18 @@
                             <h2>Level Difficulty</h2>
                             <!-- level difficulty -->
                             <div class="level-difficulty">
-                                <button class="btn-difficulty-level" type="button">Easy</button>
-                                <button class="btn-difficulty-level" type="button">Medium</button>
-                                <button class="btn-difficulty-level" type="button">Hard</button>
+                                <button class="btn-difficulty-level" type="button"
+                                    onclick="setDifficultyLevel('easy');location.reload();">
+                                    Easy
+                                </button>
+                                <button class=" btn-difficulty-level" type="button"
+                                    onclick="setDifficultyLevel('medium');location.reload();">
+                                    Medium
+                                </button>
+                                <button class="btn-difficulty-level" type="button"
+                                    onclick="setDifficultyLevel('hard');location.reload();">
+                                    Hard
+                                </button>
                             </div>
                         </div>
                         <div class="game-console-info">
