added main menu which explains game controls

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="end-game-modal" class="modal-game">
+                <div id="main-game-modal" class="modal-game">
 
                 </div>
             </div>
