buttons for difficulty now highlight if active

--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
                             <h2>Level Difficulty</h2>
                             <!-- level difficulty -->
                             <div class="level-difficulty">
-                                <button class="btn-difficulty-level" type="button"
+                                <button class="btn-difficulty-level" data-diff="easy" type="button"
                                     onclick="setDifficultyLevel('easy');location.reload();">
                                     Easy
                                 </button>
-                                <button class=" btn-difficulty-level" type="button"
+                                <button class="btn-difficulty-level" data-diff="medium" type="button"
                                     onclick="setDifficultyLevel('medium');location.reload();">
                                     Medium
                                 </button>
-                                <button class="btn-difficulty-level" type="button"
+                                <button class="btn-difficulty-level" data-diff="hard" type="button"
                                     onclick="setDifficultyLevel('hard');location.reload();">
                                     Hard
                                 </button>
