--- a/main-menu.html
+++ b/main-menu.html
@@ -19,39 +19,42 @@
 
 <body>
 
-    <div class="page-container">
-        <!-- game overhead header -->
-        <header>
-            <div class="main-page-overhead">
-                <h1>Cat and Mouse Game</h1>
-                <a class="link-github" href="https://github.com/steharr/ms2-cat-and-mouse-game" target="_blank"
-                    rel="noopener"><i class="fab fa-github"></i></a>
-            </div>
-        </header>
-        <!-- Main Game Grid -->
-        <section class="game-entry-window">
-            <div class="main-menu">
-                <h2>Welcome to Cat and Mouse!</h2>
-                <h3>How to Play</h3>
+    <!-- game overhead header -->
+    <header>
+        <div class="main-page-overhead">
+            <h1>Cat and Mouse Game</h1>
+            <a class="link-github" href="https://github.com/steharr/ms2-cat-and-mouse-game" target="_blank"
+                rel="noopener"><i class="fab fa-github"></i></a>
+        </div>
+    </header>
+    <!-- Main Game Grid -->
+    <section class="game-entry-window">
+        <div class="main-menu">
+            <h2>Welcome to Cat and Mouse!</h2>
+            <h3>How to Play</h3>
+            <div class="instructions">
                 <p>Move the Mouse through the level by pressing the arrow keys</p>
                 <p>Your goal is to reach the cheese!</p>
                 <p>Watch out for the cat on your tail...</p>
-
-                <img class="how-to-play" src="./assets/images/how-to-play.gif"
-                    alt="a moving image which shows gameplay of the mouse moving through the level getting chased by a cat">
-                <a class="btn-main-menu" href="./index.html">Begin!</a>
             </div>
-        </section>
-
-        <!-- Footer -->
-        <footer>
-            <div class="footer-contents">
-                <div id="copyright">
-                    <p>&#169; Stephen Harrold 2021</p>
-                </div>
+            <img class="how-to-play" src="./assets/images/how-to-play.gif"
+                alt="a moving image which shows gameplay of the mouse moving through the level getting chased by a cat">
+            <div class="disclaimer">
+                <p>If stuck, press Spacebar to generate a new level</p>
             </div>
-        </footer>
-    </div>
+            <a class="btn-main-menu" href="./index.html">Begin!</a>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="footer-contents">
+            <div id="copyright">
+                <p>&#169; Stephen Harrold 2021</p>
+            </div>
+        </div>
+    </footer>
+
 
 
 
