adjusted href links so new pages names are considered for links between pages

--- a/game.html
+++ b/game.html
@@ -41,7 +41,7 @@
                     <button class="btn-nav" type="button" onclick="restartLevel(true);"><i
                             class="fas fa-undo-alt"></i></button>
                     <!-- main menu button -->
-                    <a class="btn-nav" href="./main-menu.html"><i class="fas fa-home"></i></a>
+                    <a class="btn-nav" href="./index.html"><i class="fas fa-home"></i></a>
                 </div>
 
                 <div class="game-console-game-buttons">
