--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="disclaimer">
                 <p>If stuck, press Spacebar to generate a new level</p>
             </div>
-            <a class="btn-main-menu" href="./index.html">Begin!</a>
+            <a class="btn-main-menu" href="./game.html">Begin!</a>
         </div>
     </section>
 
