testing: made correction to script element in page after html validator results

--- a/game.html
+++ b/game.html
@@ -128,7 +128,7 @@
 
 
     <!-- Custom JavaScript -->
-    <script src="assets\js\main.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
