testing: added accessibility labels for button and link elements after lighthouse results

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <header>
         <div class="main-page-overhead">
             <h1>Cat and Mouse Game</h1>
-            <a class="link-github" href="https://github.com/steharr/ms2-cat-and-mouse-game" target="_blank"
-                rel="noopener"><i class="fab fa-github"></i></a>
+            <a aria-label="external link to github repo of project" class="link-github"
+                href="https://github.com/steharr/ms2-cat-and-mouse-game" target="_blank" rel="noopener"><i
+                    class="fab fa-github"></i></a>
         </div>
     </header>
     <!-- Main Game Grid -->
