--- a/game.html
+++ b/game.html
@@ -19,8 +19,9 @@
     <header>
         <div class="main-page-overhead">
             <h1>Cat and Mouse Game</h1>
-            <a class="link-github" href="https://github.com/steharr/ms2-cat-and-mouse-game" target="_blank"
-                rel="noopener"><i class="fab fa-github"></i></a>
+            <a aria-label="external link to github repo of project" class="link-github"
+                href="https://github.com/steharr/ms2-cat-and-mouse-game" target="_blank" rel="noopener"><i
+                    class="fab fa-github"></i></a>
         </div>
     </header>
     <!-- Main Game Grid -->
@@ -34,10 +35,10 @@
 
                 <div class="game-console-nav-buttons">
                     <!-- restart button -->
-                    <button class="btn-nav" type="button" onclick="restartLevel(true);"><i
-                            class="fas fa-undo-alt"></i></button>
+                    <button aria-label="restart level button" class="btn-nav" type="button"
+                        onclick="restartLevel(true);"><i class="fas fa-undo-alt"></i></button>
                     <!-- main menu button -->
-                    <a class="btn-nav" href="./index.html"><i class="fas fa-home"></i></a>
+                    <a aria-label="main menu button" class="btn-nav" href="./index.html"><i class="fas fa-home"></i></a>
                 </div>
 
                 <div class="game-console-game-buttons">
@@ -45,16 +46,17 @@
                         <h2>Level Difficulty</h2>
                         <!-- level difficulty -->
                         <div class="level-difficulty">
-                            <button class="btn-difficulty-level" data-diff="easy" type="button"
-                                onclick="setDifficultyLevel('easy');location.reload();">
+                            <button aria-label="Select Easy Game Difficulty" class="btn-difficulty-level"
+                                data-diff="easy" type="button" onclick="setDifficultyLevel('easy');location.reload();">
                                 Easy
                             </button>
-                            <button class="btn-difficulty-level" data-diff="medium" type="button"
+                            <button aria-label="Select Medium Game Difficulty" class="btn-difficulty-level"
+                                data-diff="medium" type="button"
                                 onclick="setDifficultyLevel('medium');location.reload();">
                                 Medium
                             </button>
-                            <button class="btn-difficulty-level" data-diff="hard" type="button"
-                                onclick="setDifficultyLevel('hard');location.reload();">
+                            <button aria-label="Select Hard Game Difficulty" class="btn-difficulty-level"
+                                data-diff="hard" type="button" onclick="setDifficultyLevel('hard');location.reload();">
                                 Hard
                             </button>
                         </div>
@@ -87,21 +89,25 @@
                         <!-- arrow buttons -->
                         <div class="arrows">
                             <div class="arrows-up">
-                                <button class="controller-button-container" id="arrow-up" type="button" onclick="">
+                                <button aria-label="Move Character Up" class="controller-button-container" id="arrow-up"
+                                    type="button" onclick="">
                                     <i class="fas fa-caret-up"></i>
                                 </button>
                             </div>
                             <div class="arrows-left-right">
-                                <button class="controller-button-container" id="arrow-left" type="button" onclick="">
+                                <button aria-label="Move Character Left" class="controller-button-container"
+                                    id="arrow-left" type="button" onclick="">
                                     <i class="fas fa-caret-left"></i>
                                 </button>
                                 <div class="controller-center"><span class="controller-center-circle"></span></div>
-                                <button class="controller-button-container" id="arrow-right" type="button" onclick="">
+                                <button aria-label="Move Character Right" class="controller-button-container"
+                                    id="arrow-right" type="button" onclick="">
                                     <i class="fas fa-caret-right"></i>
                                 </button>
                             </div>
                             <div class="arrows-down">
-                                <button class="controller-button-container" id="arrow-down" type="button" onclick="">
+                                <button aria-label="Move Character Down" class="controller-button-container"
+                                    id="arrow-down" type="button" onclick="">
                                     <i class="fas fa-caret-down"></i>
                                 </button>
                             </div>
