--- a/game.html
+++ b/game.html
@@ -25,7 +25,7 @@
         </div>
     </header>
     <!-- Main Game Grid -->
-    <section>
+    <section class="game-container">
         <div class="main-game-console">
 
             <div id="game-grid">
