fixed sizing issue of buttons on end game modal

--- a/game.html
+++ b/game.html
@@ -35,7 +35,7 @@
 
                 <div class="game-console-nav-buttons">
                     <!-- restart button -->
-                    <button aria-label="restart level button" class="btn-nav" type="button"
+                    <button aria-label="restart level button" id="restart" class="btn-nav" type="button"
                         onclick="restartLevel(true);"><i class="fas fa-undo-alt"></i></button>
                     <!-- main menu button -->
                     <a aria-label="main menu button" class="btn-nav" href="./index.html"><i class="fas fa-home"></i></a>
